<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="accion_mostrar">Show place</string>
    <string name="accion_preferencias">Preferences</string>
    <string name="accion_acerca_de">About</string>
    <string name="accion_salir">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Name:</string>
    <string name="algo_que_identifique_el_lugar">Description</string>
    <string name="tipo">Type:</string>
    <string name="t_direccion">Direccion:</string>
    <string name="direccion_del_lugar">Direccion to the place</string>
    <string name="t_telefono">Contact:</string>
    <string name="telefono">Telephone to contact</string>
    <string name="t_url">Url:</string>
    <string name="url">Website</string>
    <string name="t_comentario">Comments:</string>
    <string name="comentario">Rating</string>
</resources>
